err/matrix-keypad.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/matrix_keypad'...
Compiling './lib/python3.5/site-packages/matrix_keypad/BBb_GPIO.py'...
***   File "./lib/python3.5/site-packages/matrix_keypad/BBb_GPIO.py", line 126
    print digit
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/matrix_keypad/MCP230xx.py'...
***   File "./lib/python3.5/site-packages/matrix_keypad/MCP230xx.py", line 105
    print digit
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/matrix_keypad/RPi_GPIO.py'...
***   File "./lib/python3.5/site-packages/matrix_keypad/RPi_GPIO.py", line 100
    print digit
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/matrix_keypad/matrix_keypad_demo.py'...
***   File "./lib/python3.5/site-packages/matrix_keypad/matrix_keypad_demo.py", line 43
    print "Please enter a 4 digit code: "
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/matrix_keypad/matrix_keypad_demo2.py'...
***   File "./lib/python3.5/site-packages/matrix_keypad/matrix_keypad_demo2.py", line 52
    print "Digit Entered:       %s"%digit
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/matrix_keypad-1.2.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
